<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/btnImportImages"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_import_images"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnImportVideos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />
    <Button
        android:id="@+id/btnImportVideos"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_import_videos"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cardImages"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImportImages"
        app:layout_constraintWidth_percent="0.9" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/cardVideos"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/btnImportVideos"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_images"
                android:textColor="@color/customLightPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textSelectedImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImages"
                android:text="10 files selected. Click to save"
                android:padding="10dp"
                android:textSize="16sp"
                android:visibility="gone"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/customLightPrimary"
                app:layout_constraintWidth_percent="0.9"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVideos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImages"
        app:layout_constraintWidth_percent="0.9"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_videos"
                android:textColor="@color/customLightPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textSelectedVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textVideos"
                android:text="10 files selected. Click to save"
                android:padding="10dp"
                android:textSize="16sp"
                android:visibility="gone"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/customLightPrimary"
                app:layout_constraintWidth_percent="0.9"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>